# nizk

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myapplication/: MainActivity.java
app/src/main/java/com/nizkjnidemo/: NizkJniKit.java
app/src/main/jni/: Android.mk  Application.mk  Test.cpp  Test.h  big.cpp  big.h  bn_pair.cpp  com_nizkjnidemo_NizkJniKit.cpp  com_nizkjnidemo_NizkJniKit.h  crt.h  ec2.h  ecn.cpp  ecn.h  ecn2.cpp  ecn2.h  flash.h  mirdef.h  mrarth1.c  nizk.cpp  nizk.h  pairing_3.h  stdafx.cpp  stdafx.h  typedef.h  zzn.cpp  zzn.h  zzn12a.cpp  zzn12a.h  zzn2.cpp  zzn2.h  zzn4.cpp  zzn4.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
